--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Game of Despair</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="icon" type="image/png" href="">
-    <meta name="description" content="">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="icon" type="image/png" href="" />
+    <meta name="description" content="" />
+  </head>
+  <body>
     <main>
-        <img src="img/Game%20of%20Despair.jpeg" alt="Game of Despair">
-        <table>
-            <tr>
-                <th>章节</th>
-                <th>播放</th>
-            </tr>
-            <tr>
-                <td>第1章 小恶魔</td>
-                <td>
-                    <audio controls>
-                        <source src="audio/Chapter-1.mp3" type="audio/mpeg">
-                    </audio>
-                </td>
-            </tr>
-<!--            <tr>-->
-<!--                <td>第1124章 你不知道的事</td>-->
-<!--                <td>-->
-<!--                    <audio controls>-->
-<!--                        <source src="audio/Chapter-1.mp3" type="audio/mpeg">-->
-<!--                    </audio>-->
-<!--                </td>-->
-<!--            </tr>-->
-        </table>
+      <img src="img/Game%20of%20Despair.jpeg" alt="Game of Despair" />
+      <table>
+        <tr>
+          <th>章节</th>
+          <th>播放</th>
+        </tr>
+        <tr>
+          <td>第1章 小恶魔</td>
+          <td>
+            <audio controls>
+              <source src="audio/Chapter-1.mp3" type="audio/mpeg" />
+            </audio>
+          </td>
+        </tr>
+        <!--            <tr>-->
+        <!--                <td>第1124章 你不知道的事</td>-->
+        <!--                <td>-->
+        <!--                    <audio controls>-->
+        <!--                        <source src="audio/Chapter-1.mp3" type="audio/mpeg">-->
+        <!--                    </audio>-->
+        <!--                </td>-->
+        <!--            </tr>-->
+      </table>
     </main>
-</body>
+  </body>
 </html>
